refactor(strategy): Java 전략 스캐너 S1~S16 정리 및 S16 추가
전략별로 흩어져 있던 스캐너/평가기를 service/strategy 아래로 모으고
공통 일봉 처리 로직을 DailyStrategySupport로 뽑았다.

- S16AccumulationShadowScanner 신규 (섀도우 모드 축적 전략)
- S1~S15 스캐너/평가기 시그니처와 후보 풀 접근 방식 통일
- 각 스캐너에 대응 테스트 추가

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01KgkwVAmjZ8ZKWCMfjQB4Hv